# gstart

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  call_cpp.py  save_level.json  setup.bash  valgrind_nvidia_lib_suppression.supp  valgrind_suppresion_creator.py
.github/workflows/: unit_test.yml
cmake/: CMakeUtilities.cmake
scripts/: essentials.sh  install_essentials.sh
src/: CMakeLists.txt  gstart.cpp  main.cpp
src/LevelCreator/: CMakeLists.txt  ResolutionPy.cpp  creator.cpp
src/LevelCreator/include/LevelCreator/: Block.h  LevelCreator.h  Resolution.h
src/LevelCreator/src/: LevelCreator.cpp
src/config/: CMakeLists.txt
src/config/include/config/: globalConfig.h  windowConfig.h
src/config/src/: globalConfig.cpp
src/gstart/: CMakeLists.txt  GstartPy.cpp
src/gstart/include/gstart/: ConsoleLog.h  gstart.h
src/gstart/src/: ConsoleLog.cpp  gstart.cpp
src/shapes/: CMakeLists.txt  WorkerPy.cpp
src/shapes/include/shapes/: lineShape.h  shapeFactory.h  transformations.h  workerShape.h  workerTail.h
src/shapes/src/: lineShape.cpp  workerShape.cpp
src/shapes/test/: TestBasePoints.cpp  TestDirections.cpp  TestWorkerShape.cpp
